2008-11-17  Gabor Toeroek <tgabor84@gmail.com>

	* src/usbs_at91.c (usbs_at91_set_pullup): Fix typo introduced by
          Andrew Lunn in the last patch.

2008-11-03  Gabor Toeroek <tgabor84@gmail.com>

	* cdl/usbs_at91.cdl: 
	* include/usbs_at91.h:
	* src/usbs_at91.c:
	* src/usbs_at91_data.c: Support for SAM7SE which has an internal
	  pullup.  Added extra endpoints for those chips that have them.
	
2007-11-20  Andrew Lunn  <andrew.lunn@ascom.ch>

	* cdl/usbs_at91.cdl: Fixed typos in
	CYGNUM_DEVS_USB_AT91_GPIO_PULLUP_INVERTED and
	CYGNUM_DEVS_USB_AT91_GPIO_READ_POWER_INVERTED. Fixing the typo.

	* src/usbs_at91.c (usbs_at91_set_pullup): Change the logic so that
	CYGNUM_DEVS_USB_AT91_GPIO_PULLUP_INVERTED does actually cause an
	invert when set true.
	
2006-09-07  John Eigelaar  <jeigelaar@mweb.co.za>

	* cdl/usbs_at91.c: Read actual EP addresses from the EP configuartion
	rather than relying on the order in the configuration list.

2006-06-06  Andrew Lunn  <andrew.lunn@ascom.ch>

	* cdl/usbs_at91.cdl: Allow EP0 to be enabled when there are no
	slave clients.

2006-05-25  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/usbs_at91_data.cxx: Change the initialization priority.  The
	USB tty driver is initialized at priority CYG_INIT_IO, so the USB
	device has to be initialized before that.

2006-05-19  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/usbs_at91.c: Rework pullup and power dectect to use the AT91
	GPIO macros.

2006-05-07  Andrew Lunn  <andrew.lunn@ascom.ch>

	* Included into eCos anonymous CVS.

	Note: There appears to be a hardware bug with OUT transfers.  It
	appears that after resetting the endpoint, the first OUT transfer
	does not trigger a receive interrupt. The BK0 bit is not set,
	however the number of bytes in the receiver FIFO is correct.  The
	second OUT transfer causes both BK0 and BK1 bits to be set and an
	interrupt generated. Currently no workaround is used to correct
	this behavoiour. 
 	
2006-04-23  Andrew Lunn  <andrew.lunn@ascom.ch>
