@@ -1,3 +1,12 @@
+2010-11-12  Christophe Coutand  <ecos@hotmail.co.uk>
+
+	* src/usbs_at91.c   : Complete support for halting endpoints
+	* cdl/usbs_at91.cdl : Add option 
+	CYGSEM_DEVS_USB_AT91_ZERO_LENGTH_PACKET_TERMINATION. When data
+	transfer length is known from both side, sending an empty packet
+	at the end of the transfer is not required.
+	Add devtab entry for endpoints 4 to 7.
+    
 2008-11-17  Gabor Toeroek <tgabor84@gmail.com>
 
 	* src/usbs_at91.c (usbs_at91_set_pullup): Fix typo introduced by
@@ -101,7 +110,7 @@
 // ####GPLCOPYRIGHTBEGIN####                                                
 // -------------------------------------------                              
 // This file is part of eCos, the Embedded Configurable Operating System.   
-// Copyright (C) 1998, 1999, 2000, 2001, 2002 Free Software Foundation, Inc.
+// Copyright (C) 1998, 1999, 2000, 2001, 2002, 2010 Free Software Foundation, Inc.
 //
 // This program is free software; you can redistribute it and/or modify     
 // it under the terms of the GNU General Public License as published by     
